NEWS for the R Package Luminescence

Changes in version 0.9.0 (, 2018):

  New functions:

         • Dummy

  Bugfixes and changes:

         •
