@@ -172,6 +172,7 @@ Collate:
     'methods_RLum.R'
     'model_LuminescenceSignals.R'
     'plot_AbanicoPlot.R'
+    'plot_DRCSummary.R'
     'plot_DRTResults.R'
     'plot_DetPlot.R'
     'plot_FilterCombinations.R'
