@@ -142,6 +142,7 @@ export(merge_Risoe.BINfileData)
 export(model_LuminescenceSignals)
 export(names_RLum)
 export(plot_AbanicoPlot)
+export(plot_DRCSummary)
 export(plot_DRTResults)
 export(plot_DetPlot)
 export(plot_FilterCombinations)
